test/fail/integration/_fail_grammar_if_block_func_3.hs
x :: Int
x = if True then 4 else jl
main = print "hello"